# 2D-Polygon-Intersection

./: CMakeLists.txt  Configure.cmake  build_debug.cmd  build_release.cmd
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  lingeo.cpp  lingeo.hpp
tests/: CMakeLists.txt  unit_tests.cpp
